--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "class-validator": "^0.13.2",
     "graphql": "15.7.2",
     "graphql-tools": "^8.2.0",
     "mongodb": "^4.2.1",
@@ -39,7 +40,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
