--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "15.7.2",
     "graphql-tools": "^8.2.0",
