--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "graphql": "15.7.2",
     "graphql-tools": "^8.2.0",
+    "hbs": "^4.2.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "mysql2": "^2.3.3",
