--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/yargs": "^17.0.7",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "class-transformer": "^0.5.1",
@@ -39,6 +40,7 @@
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "mysql2": "^2.3.3",
+    "nestjs-command": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
