--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "generate:typings": "ts-node src/generate-typings"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
@@ -36,6 +37,8 @@
     "apollo-server-express": "^3.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "csvtojson": "^2.0.10",
+    "fs": "^0.0.1-security",
     "graphql": "15.7.2",
     "graphql-tools": "^8.2.0",
     "hbs": "^4.2.0",
