--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "graphql": "15.7.2",
     "graphql-tools": "^8.2.0",
     "hbs": "^4.2.0",
+    "mathjs": "^10.0.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "mysql2": "^2.3.3",
