--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cron": "^1.7.3",
     "@types/yargs": "^17.0.7",
     "@vue/cli": "^4.5.15",
     "apollo-server-core": "^3.5.0",
